--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en" >
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,12 +8,8 @@
     <title>Vite + React</title>
   </head>
   <body>
-    
- 
     <div id="root"></div>
-    
-    <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/index.js"></script>
 
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
